--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -103,7 +103,7 @@
 				</view>
 				<view class="margin-sm">
 					<text>
-						邀请你参加饥饿24小时挑战！接受邀请可以赠送{{inviterInfo.nickName}}一把挖掘抗饥饿能量的铲子哦！</text>
+						邀请你参加饥饿24小时挑战！接受邀请可以赠送{{inviterInfo.nickName}}一把挖掘「抗饥饿能量」的铲子哦！</text>
 				</view>
 				<button wx:if="{{!isUserInfoAuthorized && canIUse}}" class="index-button cu-btn round bg-warm-yellow margin-sm"
 					open-type="getUserInfo" bindgetuserinfo="toGetUserInfo">接受挑战</button>
@@ -240,12 +240,13 @@
 	</view>
 	<view class="cu-modal {{modalName == 'result' ? 'show' : ''}}">
 		<view class="cu-dialog bg-white-yellow">
-			<view class="cu-bar">
-				<view class="content"> </view>
+			<view class="cu-bar justify-end bg-white-yellow">
+				<view class="content"></view>
 				<view class="action" bindtap="hideModal">
 					<text class="cuIcon-close text-red"></text>
 				</view>
 			</view>
+			
 			<!-- <view><canvas canvas-id="shareResult" style="width:600px;height:900px"> </canvas></view> -->
 			<view class="padding-lg">
 				<text wx:if="{{finalSuccess}}">恭喜你！在24小时过去之后还有剩余能量，完成了饥饿24的挑战。你愿意把今天省下的餐费捐给贫困地区和发展中国家的饥饿儿童吗？
@@ -254,9 +255,9 @@
 				</text>
 			</view>
 			<view>
-				<image style="width:80vw; height:173.2vw" src="https://hunger24.cfpa.org.cn/images/share_poster.png"></image>
-				<!-- <image wx:if="{{finalSuccess}}" src="https://hunger24.cfpa.org.cn/images/success_poster.png" data-image-url="https://hunger24.cfpa.org.cn/images/success_poster.png"></image>
-	 <image wx:if="{{!finalSuccess}}" src="https://hunger24.cfpa.org.cn/images/failure_poster.png" data-image-url="https://hunger24.cfpa.org.cn/images/failure_poster.png"></image> -->
+				<!-- <image style="width:80vw; height:173.2vw" src="https://hunger24.cfpa.org.cn/images/share_poster.png"></image> -->
+				<image wx:if="{{finalSuccess}}" src="https://hunger24.cfpa.org.cn/images/success_poster.png" style="width:80vw; height:173.2vw"></image>
+	 <image wx:if="{{!finalSuccess}}" src="https://hunger24.cfpa.org.cn/images/failure_poster.png" style="width:80vw; height:173.2vw"></image>
 
 				<button class="index-button cu-btn round bg-warm-yellow margin-lg" bindtap="saveImageToAlbum">保存图片</button>
 			</view>
