changed minor details

--- a/miniprogram/pages/play/play.wxml
+++ b/miniprogram/pages/play/play.wxml
@@ -56,7 +56,7 @@
 				</view>
 			</view>
 			<view class="padding-lg bg-white-yellow" style="text-align:left;">
-				<text>1）时间进度和能量进度均达到满格后为挑战成功；\n 2）时间进度用来记录挑战者的饥饿时间，24小时为满格；如果撑不住了，点击退出可中途放弃挑战；\n 3）能量进度用来记录挑战者的能量值，24个能量为满格；\n 4）挑战者通过挖农作物小游戏来积攒能量，每个挑战者有5个铲子，每邀请一个朋友或者捐一餐，可获得一个新的铲子。
+				<text>1.时间进度和能量进度均达到满格后为挑战成功；\n 2.时间进度用来记录挑战者的饥饿时间，24小时为满格；如果撑不住了，点击退出可中途放弃挑战；\n 3.能量进度用来记录挑战者的能量值，24个能量为满格；\n 4. 挑战者通过挖农作物小游戏来积攒能量，每个挑战者有5个铲子，每邀请一个朋友或者捐一餐，可获得一个新的铲子。
         </text>
 			</view>
 		</view>
